# bot-customerObsessed-No-Prob-Bob-afterburner

./: .claude-output.txt  .env.example  .gitignore  .sprint-metrics.txt  .sprint-planning-context.txt  .venv  AGENT_BRIEF.md  CLAUDE.md  README.md  SPRINT_BRIEF.md  Sprint-Notes.md  cli.py  dashboard.json  pyproject.toml
.publish-output/: auth.js  backlog.html  getting-started.html  index.html  plan.html  roadmap.html  sessions.html  sprints.html  use-cases.html  vision.html
.sprint/: config.sh
bot/: __main__.py  auth.py  chat_ui.html  config.py  db.py  facts.py  fast_path.py  gateway.py  input_filter.py  llm.py  llm_config.py  memory.py  personality.py  polling.py  server.py  stt.py  tools.py  tts.py
docs/: PROJECT_STATUS_2026-03-19-sprint1.md  PROJECT_STATUS_2026-03-19-sprint10.md  PROJECT_STATUS_2026-03-19-sprint11.md  PROJECT_STATUS_2026-03-19-sprint2.md  PROJECT_STATUS_2026-03-19-sprint3.md  PROJECT_STATUS_2026-03-19-sprint4.md  PROJECT_STATUS_2026-03-19-sprint5.md  PROJECT_STATUS_2026-03-19-sprint6.md  PROJECT_STATUS_2026-03-19-sprint7.md  PROJECT_STATUS_2026-03-19-sprint8.md  PROJECT_STATUS_2026-03-19-sprint9.md  PROJECT_STATUS_2026-03-20-sprint12.md  PROJECT_STATUS_2026-03-20-sprint13.md  PROJECT_STATUS_2026-03-20-sprint14.md  PROJECT_STATUS_2026-03-20-sprint15.md  PROJECT_STATUS_2026-03-20-sprint16.md  PROJECT_STATUS_2026-03-20-sprint17.md  PROJECT_STATUS_2026-03-20-sprint18.md  PROJECT_STATUS_2026-03-20-sprint19.md  PROJECT_STATUS_2026-03-20-sprint20.md  PROJECT_STATUS_2026-03-21-sprint21.md  PROJECT_STATUS_2026-03-21-sprint22.md  PROJECT_STATUS_2026-03-21-sprint23.md  PROJECT_STATUS_2026-03-21-sprint24.md  PROJECT_STATUS_2026-03-21-sprint25.md  PROJECT_STATUS_2026-03-21-sprint26.md  PROJECT_STATUS_2026-03-21-sprint27.md  PROJECT_STATUS_2026-03-21-sprint28.md  PROJECT_STATUS_2026-03-21-sprint29.md  PROJECT_STATUS_2026-03-21-sprint30.md  PROJECT_STATUS_2026-03-21-sprint31.md  PROJECT_STATUS_2026-03-21-sprint32.md  PROJECT_STATUS_2026-03-21-sprint33.md  PROJECT_STATUS_2026-03-21-sprint34.md  PROJECT_STATUS_2026-03-21-sprint35.md  PROJECT_STATUS_2026-03-21-sprint36.md  PROJECT_STATUS_2026-03-21-sprint37.md  PROJECT_STATUS_2026-03-21-sprint38.md  PROJECT_STATUS_2026-03-21-sprint39.md  PROJECT_STATUS_2026-03-21-sprint40.md
evaluations/: __init__.py  runner.py
personalities/: base.md  customer-discovery.md
scripts/: generate_sprint_history.py  run.sh  setup_tunnel.sh  start.sh  start_local.sh
tests/: test_config.py  (+27 more)
(+97 files in other folders)
