[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "afterburner-customer-bot"
version = "0.1.0"
description = "Conversational AI customer discovery bot with personality framework"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
voice = [
    "piper-tts>=1.2",
    "faster-whisper>=1.0",
    "numpy>=1.24",
    "scipy>=1.10",
]
auth = [
    "google-auth>=2.22",
]
providers = [
    "anthropic>=0.30",
    "openai>=1.30",
]
all = [
    "piper-tts>=1.4",
    "faster-whisper>=1.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "google-auth[requests]>=2.20",
    "anthropic>=0.30",
    "openai>=1.30",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anthropic>=0.30",
    "openai>=1.30",
    "google-auth[requests]>=2.20",
]

[project.scripts]
afterburner-bot = "cli:main"

[tool.setuptools.packages.find]
include = ["bot*", "evaluations*"]
